# rag_colombia

./: Dockerfile  README.md  api.py  colombia.md  colombia_clean.md  embeddings_cache.json  index.html  main.py  pyproject.toml  test_rag_complete.py
index/: embeddings.py  extractor.py  index.py  llm_service.py  splitter.py  vector_store.py
